// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityFeedCard when there is a service delivery should render service delivery activity 1`] = `
<div
  className="sc-cmthru jjutsD"
>
  <div
    className="sc-hMFtBS bSjygG"
  >
    <div
      className="sc-cLQEGU ciAtZf"
    >
      A service was provided to the company
    </div>
    <div
      className="sc-gqPbQI fPqDmG"
    >
      a month ago
    </div>
    <div
      className="sc-hORach cvIZEb"
    >
      <h3
        className="sc-cMljjf kCLKvB"
        size="MEDIUM"
      >
        Openening of overseas office
      </h3>
    </div>
  </div>
  <details
    className="sc-bMVAic cchcEg sc-kEYyzF ihcnje"
    open={false}
  >
    <summary
      className="sc-kkGfuU cCdZFh"
    >
      <span
        className="sc-iAyFgw jRkIxn"
      >
        Who was involved
      </span>
    </summary>
    <div
      className="sc-hSdWYo dfimje"
    >
      <table
        className="sc-bwCtUz iVExri"
      >
        <tbody
          className="sc-eXEjpC fuVqJC"
        >
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Advisers
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <span>
                Mario Bros
                 
                <a
                  className="sc-bwzfXH VXMCV"
                  href="mailto:mariobros@dit.com"
                  muted={false}
                >
                  mariobros@dit.com
                </a>
              </span>
            </td>
          </tr>
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Services
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              Events - Overseas
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-bwzfXH VXMCV"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/854d8d31-7405-4625-a957-0ed2c3092caa"
        muted={false}
      >
        Go to the interaction detail page
      </a>
    </div>
  </details>
</div>
`;

exports[`ActivityFeedCard when there is an activity item of arbitrary type should render default activity 1`] = `
<div
  className="sc-bAeIUo hKMfQm"
>
  <div
    className="sc-iujRgT izOATC"
  >
    <h3
      className="sc-cMljjf kCLKvB"
      size="MEDIUM"
    >
      subject
    </h3>
  </div>
</div>
`;

exports[`ActivityFeedCard when there is an interaction should render interaction activity 1`] = `
<div
  className="sc-cmthru jjutsD"
>
  <div
    className="sc-hMFtBS bSjygG"
  >
    <div
      className="sc-cLQEGU ciAtZf"
    >
      An interaction with the company took place
    </div>
    <div
      className="sc-gqPbQI fPqDmG"
    >
      a month ago
    </div>
    <div
      className="sc-hORach cvIZEb"
    >
      <h3
        className="sc-cMljjf kCLKvB"
        size="MEDIUM"
      >
        Invited to Technology Roundtable
      </h3>
    </div>
  </div>
  <details
    className="sc-bMVAic cchcEg sc-kEYyzF ihcnje"
    open={false}
  >
    <summary
      className="sc-kkGfuU cCdZFh"
    >
      <span
        className="sc-iAyFgw jRkIxn"
      >
        Who was involved
      </span>
    </summary>
    <div
      className="sc-hSdWYo dfimje"
    >
      <table
        className="sc-bwCtUz iVExri"
      >
        <tbody
          className="sc-eXEjpC fuVqJC"
        >
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Advisers
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              <span>
                Mario Bros
                 
                <a
                  className="sc-bwzfXH VXMCV"
                  href="mailto:mariobros@dit.com"
                  muted={false}
                >
                  mariobros@dit.com
                </a>
              </span>
            </td>
          </tr>
          <tr
            className="sc-iQKALj ftJWrM"
          >
            <th
              className="sc-RefOD dxRfSY"
              style={
                Object {
                  "border": 0,
                  "fontWeight": "normal",
                }
              }
            >
              Services
            </th>
            <td
              className="sc-RefOD gzbQXK"
              style={
                Object {
                  "border": 0,
                }
              }
            >
              Account Management
            </td>
          </tr>
        </tbody>
      </table>
      <a
        className="sc-bwzfXH VXMCV"
        href="https://example.com/companies/a4ead59f-dfc8-e511-a5e6-e4115bead28a/interactions/a066cc49-b679-4cbe-93c5-3ceba2f067ec"
        muted={false}
      >
        Go to the interaction detail page
      </a>
    </div>
  </details>
</div>
`;
